--- a/apkTools_release/qrcode_generator.html
+++ b/apkTools_release/qrcode_generator.html
@@ -282,14 +282,6 @@
                 <option value="H">H - 高 (约30%)</option>
               </select>
             </div>
-            <div class="form-group">
-              <label for="qrcodeStyle">样式类型</label>
-              <select id="qrcodeStyle">
-                <option value="square" selected>方形</option>
-                <option value="dots">圆点</option>
-                <option value="rounded">圆角</option>
-              </select>
-            </div>
           </div>
           <div class="form-group">
             <label>颜色设置</label>
@@ -462,7 +454,6 @@
       const errorLevel = document.getElementById('qrcodeErrorLevel').value;
       const color = document.getElementById('qrcodeColor').value;
       const bgColor = document.getElementById('qrcodeBgColor').value;
-      const style = document.getElementById('qrcodeStyle').value;
 
       // 清空之前的二维码
       const qrcodeDiv = document.getElementById('qrcode');
@@ -506,14 +497,8 @@
 
           if (hasContent || attempts >= maxAttempts) {
             clearInterval(checkCanvas);
-            // 使用 requestAnimationFrame 确保浏览器完成渲染
-            requestAnimationFrame(() => {
-              setTimeout(() => {
-                // 重新获取 context 确保 willReadFrequently 设置正确
-                const finalCtx = canvas.getContext('2d', { willReadFrequently: true });
-                applyStyle(canvas, finalCtx, size, color, bgColor, style);
-              }, 50);
-            });
+            // 二维码生成完成，直接显示
+            document.getElementById('qrcodePreview').style.display = 'block';
           }
         } else if (attempts >= maxAttempts) {
           clearInterval(checkCanvas);
@@ -522,143 +507,6 @@
       }, 50);
     }
 
-    // 应用样式
-    function applyStyle(canvas, ctx, size, color, bgColor, style) {
-      console.log('开始应用样式', { style, size });
-
-      // 应用样式：重新绘制二维码点
-      if (style !== 'square') {
-        // 只有在需要重新绘制时才读取原始数据
-        const imageData = ctx.getImageData(0, 0, size, size);
-        const data = imageData.data;
-        console.log('应用非方形样式:', style);
-        // 更准确地检测模块大小：扫描二维码找到定位点（三个角落的大方块）
-        // 定位点的大小通常是 7x7 模块，周围有 1 模块的白色边框，所以总大小是 9x9 模块
-        // 通过检测这个模式来确定模块大小
-        let moduleSize = Math.floor(size / 25); // 默认假设25x25模块
-
-        // 改进的模块大小检测：查找定位点的特征
-        for (let testSize = 4; testSize < size / 10; testSize++) {
-          // 检查左上角定位点区域（应该是 7x7 模块的大方块）
-          const checkX = testSize * 3;
-          const checkY = testSize * 3;
-          if (checkX >= size || checkY >= size) break;
-
-          const index = (checkY * size + checkX) * 4;
-          if (index >= data.length) break;
-
-          // 检查这个区域是否形成定位点的模式（7x7 黑色方块）
-          let isPattern = true;
-          for (let dy = 0; dy < 7 && isPattern; dy++) {
-            for (let dx = 0; dx < 7 && dx + checkX < size && dy + checkY < size; dx++) {
-              const idx = ((checkY + dy) * size + (checkX + dx)) * 4;
-              if (idx < data.length) {
-                const r = data[idx];
-                const g = data[idx + 1];
-                const b = data[idx + 2];
-                const avg = (r + g + b) / 3;
-                // 定位点内部应该是黑色
-                if (dx > 0 && dx < 6 && dy > 0 && dy < 6 && avg > 128) {
-                  isPattern = false;
-                  break;
-                }
-              }
-            }
-          }
-
-          if (isPattern) {
-            moduleSize = testSize;
-            break;
-          }
-        }
-
-        // 如果检测失败，使用默认值（根据二维码版本，通常是 25x25 或 33x33 模块）
-        if (moduleSize < 3 || moduleSize > size / 10) {
-          // 尝试其他常见尺寸
-          const commonModules = [25, 33, 29, 21, 17, 13];
-          for (const mod of commonModules) {
-            const testSize = Math.floor(size / mod);
-            if (testSize >= 3 && testSize <= size / 10) {
-              moduleSize = testSize;
-              break;
-            }
-          }
-          // 如果还是失败，使用默认值
-          if (moduleSize < 3 || moduleSize > size / 10) {
-            moduleSize = Math.floor(size / 25);
-          }
-        }
-
-        console.log('检测到的模块大小:', moduleSize, '二维码尺寸:', size);
-
-        // 清除画布并重新绘制背景
-        ctx.fillStyle = bgColor;
-        ctx.fillRect(0, 0, size, size);
-
-        // 重新绘制每个模块
-        const modules = Math.floor(size / moduleSize);
-        for (let y = 0; y < modules; y++) {
-          for (let x = 0; x < modules; x++) {
-            // 计算原图中对应模块中心位置的颜色
-            const px = Math.min(Math.floor((x + 0.5) * moduleSize), size - 1);
-            const py = Math.min(Math.floor((y + 0.5) * moduleSize), size - 1);
-
-            const index = (py * size + px) * 4;
-            if (index >= data.length) continue;
-
-            // 判断是否为前景色（深色）
-            const r = data[index];
-            const g = data[index + 1];
-            const b = data[index + 2];
-            const avg = (r + g + b) / 3;
-            const isDark = avg < 128;
-
-            if (isDark) {
-              ctx.fillStyle = color;
-              const moduleX = x * moduleSize;
-              const moduleY = y * moduleSize;
-
-              if (style === 'dots') {
-                // 圆点样式
-                ctx.beginPath();
-                ctx.arc(
-                  moduleX + moduleSize / 2,
-                  moduleY + moduleSize / 2,
-                  moduleSize / 2 * 0.75,
-                  0,
-                  Math.PI * 2
-                );
-                ctx.fill();
-              } else if (style === 'rounded') {
-                // 圆角矩形样式
-                const radius = moduleSize * 0.25;
-                drawRoundedRect(ctx, moduleX, moduleY, moduleSize, moduleSize, radius);
-                ctx.fill();
-              }
-            }
-          }
-        }
-      }
-
-      // 显示预览
-      document.getElementById('qrcodePreview').style.display = 'block';
-      console.log('样式应用完成');
-    }
-
-    // 绘制圆角矩形的辅助函数
-    function drawRoundedRect(ctx, x, y, width, height, radius) {
-      ctx.beginPath();
-      ctx.moveTo(x + radius, y);
-      ctx.lineTo(x + width - radius, y);
-      ctx.quadraticCurveTo(x + width, y, x + width, y + radius);
-      ctx.lineTo(x + width, y + height - radius);
-      ctx.quadraticCurveTo(x + width, y + height, x + width - radius, y + height);
-      ctx.lineTo(x + radius, y + height);
-      ctx.quadraticCurveTo(x, y + height, x, y + height - radius);
-      ctx.lineTo(x, y + radius);
-      ctx.quadraticCurveTo(x, y, x + radius, y);
-      ctx.closePath();
-    }
 
 
     // 下载二维码
