添加两个新工具页面：多种字符串生成器和JSON格式化工具

--- a/apkTools_release/index.html
+++ b/apkTools_release/index.html
@@ -230,6 +230,18 @@
           <div class="tool-desc">支持 HTTP 请求和 WebSocket (WSS) 连接调试，类似 APIFOX，包含请求历史记录。</div>
           <a class="btn" href="./api_debugger.html">打开工具</a>
         </div>
+        <div class="tool-card">
+          <div class="tool-icon">🔤</div>
+          <div class="tool-title">多种字符串生成器</div>
+          <div class="tool-desc">生成标准银行卡号、UDID、包名、UUID、MAC地址、IP地址、邮箱等常用字符串。</div>
+          <a class="btn" href="./string_generator.html">打开工具</a>
+        </div>
+        <div class="tool-card">
+          <div class="tool-icon">📄</div>
+          <div class="tool-title">JSON 格式化工具</div>
+          <div class="tool-desc">JSON 格式化、压缩、验证和可视化预览，支持语法高亮和实时验证。</div>
+          <a class="btn" href="./json_formatter.html">打开工具</a>
+        </div>
       </div>
       <div class="quick-section">
         <div class="quick-title">快速入口</div>
@@ -246,6 +258,8 @@
           <a class="link-pill" href="./timestamp_converter.html">时间戳转换</a>
           <a class="link-pill" href="./qrcode_generator.html">二维码/条形码</a>
           <a class="link-pill" href="./api_debugger.html">API 调试</a>
+          <a class="link-pill" href="./string_generator.html">字符串生成器</a>
+          <a class="link-pill" href="./json_formatter.html">JSON 格式化</a>
         </div>
       </div>
     </div>
