--- a/apkTools_release/json_formatter.html
+++ b/apkTools_release/json_formatter.html
@@ -341,81 +341,30 @@
       previewStatus.className = 'status valid';
     }
 
-    // 语法高亮
+    // 语法高亮（使用更简单的方法）
     function syntaxHighlight(jsonString, parsedObj) {
-      let html = '';
-      const indent = 2;
-      let indentLevel = 0;
+      // 转义HTML
+      let html = jsonString
+        .replace(/&/g, '&amp;')
+        .replace(/</g, '&lt;')
+        .replace(/>/g, '&gt;');
 
-      for (let i = 0; i < jsonString.length; i++) {
-        const char = jsonString[i];
-        const nextChar = jsonString[i + 1];
-
-        if (char === '{' || char === '[') {
-          html += `<span class="json-key">${char}</span>`;
-          if (nextChar !== '}' && nextChar !== ']') {
-            indentLevel++;
-            html += '<br>' + '&nbsp;'.repeat(indentLevel * indent);
-          }
-        } else if (char === '}' || char === ']') {
-          if (jsonString[i - 1] !== '{' && jsonString[i - 1] !== '[') {
-            indentLevel--;
-            html += '<br>' + '&nbsp;'.repeat(indentLevel * indent);
-          }
-          html += `<span class="json-key">${char}</span>`;
-        } else if (char === '"') {
-          // 字符串值
-          let stringValue = '';
-          let j = i + 1;
-          while (j < jsonString.length && jsonString[j] !== '"') {
-            if (jsonString[j] === '\\' && j + 1 < jsonString.length) {
-              stringValue += jsonString[j] + jsonString[j + 1];
-              j += 2;
-            } else {
-              stringValue += jsonString[j];
-              j++;
-            }
-          }
-          const isKey = jsonString[i - 1] === '{' || jsonString[i - 1] === ',' || jsonString.substring(i - 5, i).includes(':');
-          if (isKey && jsonString[j + 1] === ':') {
-            html += `<span class="json-key">"${stringValue}"</span>`;
+      // 高亮字符串
+      html = html.replace(/("(\\u[a-zA-Z0-9]{4}|\\[^u]|[^\\"])*"(\s*:)?|\b(true|false|null)\b|-?\d+(?:\.\d*)?(?:[eE][+\-]?\d+)?)/g, function (match) {
+        let cls = 'json-number';
+        if (/^"/.test(match)) {
+          if (/:$/.test(match)) {
+            cls = 'json-key';
           } else {
-            html += `<span class="json-string">"${stringValue}"</span>`;
+            cls = 'json-string';
           }
-          i = j;
-        } else if (char === ':') {
-          html += `<span class="json-key">${char}</span> `;
-        } else if (char === ',') {
-          html += `<span class="json-key">${char}</span>`;
-          if (nextChar === ' ' || nextChar === '\n') {
-            html += '<br>' + '&nbsp;'.repeat(indentLevel * indent);
-          }
-        } else if (char.match(/[0-9]/)) {
-          // 数字
-          let number = '';
-          let j = i;
-          while (j < jsonString.length && (jsonString[j].match(/[0-9.eE+-]/) || jsonString[j] === '.')) {
-            number += jsonString[j];
-            j++;
-          }
-          html += `<span class="json-number">${number}</span>`;
-          i = j - 1;
-        } else if (jsonString.substring(i, i + 4) === 'true') {
-          html += `<span class="json-boolean">true</span>`;
-          i += 3;
-        } else if (jsonString.substring(i, i + 5) === 'false') {
-          html += `<span class="json-boolean">false</span>`;
-          i += 4;
-        } else if (jsonString.substring(i, i + 4) === 'null') {
-          html += `<span class="json-null">null</span>`;
-          i += 3;
-        } else if (char === '\n' || char === ' ') {
-          // 保留换行和空格
-          html += char === '\n' ? '<br>' : '&nbsp;';
-        } else {
-          html += char;
+        } else if (/true|false/.test(match)) {
+          cls = 'json-boolean';
+        } else if (/null/.test(match)) {
+          cls = 'json-null';
         }
-      }
+        return '<span class="' + cls + '">' + match + '</span>';
+      });
 
       return html || '<div style="color: #6c757d;">暂无内容</div>';
     }
